--- a/_data/dinners.yml
+++ b/_data/dinners.yml
@@ -12,7 +12,7 @@
   comments: ""
   last_suggested_date: "2017-08-27"
   dates_eaten: []
-  tags: ['pasta']
+  tags: ['pasta', 'veggie']
   recipe_urls: []
 - name: "slow-cooker chicken tortilla soup"
   type: "soup"
