--- a/_data/recipes.yml
+++ b/_data/recipes.yml
@@ -1,112 +1,18 @@
-- name: "popcorn"
+# TEMPLATE (DO NOT ERASE):
+# 
+# - name: "popcorn"
+#   comments:
+#   - date: "1/2/21"
+#     comment: "your thoughts"
+#   tags: ["dessert", "snack"]
+#   last_suggested_date: '2022-01-02'
+#   count: 1
+# 
+- name: "testing"
   comments:
-  - date: "12/23/17"
-    comment: "we use 1/3c kernels, and 1/4c veggie oil with some popcorn salt mixed in, microwave on 4mins until pops are 5s away. add melted butter--it turned out amazing"
-  tags:
-  - "dessert"
-  last_suggested_date: '2022-01-02'
-  count: 1
-  index: 59
-  nickname: ""
-- name: "genoise cake"
-  comments:
-  - date: "5/21/17"
-    comment: "with blueberry filling and chocolate buttercream frosting, with a bourbon-water drip in the 2 layers. Julia Child's genoise cake recipe. make sure you use the right pot and bowl! the small pot but not the smallest one--the silver one that we rarely use if that helps, and then the biggest circular glass tupperware"
-  tags:
-  - "dessert"
-  - "cake"
-  last_suggested_date: '2022-01-02'
-  count: 1
-  index: 55
-  nickname: ""
-- name: "cherry and blueberry upside-down cake"
-  comments:
-  - date: "4/11/17"
-    comment: "Bon Appetit recipe"
-  tags:
-  - "dessert"
-  - "cake"
-  last_suggested_date: '2022-01-02'
-  count: 1
-  index: 52
-  nickname: ""
-- name: "hot chocolate"
-  comments:
-  - date: "11/20/16"
-    comment: "per cup: 2T cocoa, 1T brown sugar, 1c milk; add only 2T or so milk at first to the rest, heating in pan; then once it dissolves heat the rest of the milk; once nearly boiling, put it in a blender to froth"
-  tags:
-  - "dessert"
-  last_suggested_date: '2022-01-02'
-  count: 4
-  index: 48
-  nickname: ""
-- name: "mulled spiced apple cider, pumpkin butter"
-  comments: []
-  tags:
-  - "dessert"
-  last_suggested_date: '2022-01-02'
-  count: 1
-  index: 13
-  nickname: ""
-- name: "blueberry buckle"
-  comments:
-  - date: "6/3/20"
-    comment: "this was really good. jess says she did 2c frozen blueberries"
-    url: "https://www.spendwithpennies.com/blueberry-buckle/"
-  tags:
-  - "dessert"
-  last_suggested_date: '2020-07-18'
-  count: 2
-  index: 76
-  nickname: ""
-- name: "bon appetit's best chocolate chip cookies"
-  comments:
-  - date: "5/2/20"
-    comment: "pretty good flavor, and even better the next day"
-    url: "https://www.bonappetit.com/recipe/bas-best-chocolate-chip-cookies/"
-  tags:
-  - "dessert"
-  - "cookies"
-  last_suggested_date: '2020-07-18'
-  count: 1
-  index: 73
-  nickname: ""
-- name: "bourbon cookies"
-  comments:
-  - date: "12/23/16"
-    comment: "they're basically like sugar cookies if you short on the bourbon, but they're still very good. we make a buttercream frosting for them"
-  - date: "10/25/18"
-    comment: "we make 86 of them, with buttercream frosting. we try to pipe it but it eventually starts melting/clumping weirdly, so a spoon was the way to go. maybe next time don't add more milk than the recipe calls for..."
-  - date: "12/24/20"
-    comment: "same note as last time: actually look up a buttercream recipe this time and do NOT add more milk than it says! otherwise the icing separates. such a delicious cookie though. baked for 10 minutes at 350F."
-  tags:
-  - "dessert"
-  - "cookies"
-  last_suggested_date: '2020-07-18'
-  count: 3
-  index: 49
-  nickname: ""
-- name: "poptarts"
-  comments:
-  - date: "10/27/16"
-    comment: "For all our attempts at doing this over the years, the only one that EVER turns out well is chevre with honey. Seriously. The others are never as good as they should be."
-  tags:
-  - "dessert"
-  last_suggested_date: '2020-07-18'
-  count: 1
-  index: 47
-  nickname: ""
-- name: "peach pie"
-  comments:
-  - date: "9/4/16"
-    comment: "1/4c butter, 1/2c white sugar, 1/4c brown sugar, 1/3c flour, 2T cornstarch, 1/4t cinnamon, 3 cans peaches (no syrup); 400F for 50 minutes; a mix of Betty Crocker and a simple allrecipes one"
-  tags:
-  - "dessert"
-  - "pie"
-  last_suggested_date: '2020-07-18'
-  count: 1
-  index: 46
-  nickname: ""
+  - date: "1/2/21"
+    comment: "your thoughts"
+  tags: ["dessert", "snack"]
 - name: "mexican wedding cookies"
   comments:
   - date: "11/1/20"
@@ -117,7 +23,7 @@
   tags:
   - "dessert"
   - "cookies"
-  last_suggested_date: '2020-07-25'
+  last_suggested_date: '2022-01-03'
   count: 3
   index: 62
   nickname: ""
@@ -128,7 +34,7 @@
   tags:
   - "dessert"
   - "cake"
-  last_suggested_date: '2020-07-25'
+  last_suggested_date: '2022-01-03'
   count: 1
   index: 54
   nickname: ""
@@ -139,7 +45,7 @@
   tags:
   - "dessert"
   - "cake"
-  last_suggested_date: '2020-07-25'
+  last_suggested_date: '2022-01-03'
   count: 1
   index: 30
   nickname: ""
@@ -168,7 +74,7 @@
   tags:
   - "dessert"
   - "cookies"
-  last_suggested_date: '2020-07-25'
+  last_suggested_date: '2022-01-03'
   count: 17
   index: 5
   nickname: "CkD10"
@@ -177,7 +83,7 @@
   tags:
   - "dessert"
   - "cookies"
-  last_suggested_date: '2020-07-25'
+  last_suggested_date: '2022-01-03'
   count: 3
   index: 4
   nickname: "CkD3"
@@ -3449,6 +3355,56 @@
   count: 7
   index: 16
   nickname: ""
+- name: "popcorn"
+  comments:
+  - date: "12/23/17"
+    comment: "we use 1/3c kernels, and 1/4c veggie oil with some popcorn salt mixed in, microwave on 4mins until pops are 5s away. add melted butter--it turned out amazing"
+  tags:
+  - "dessert"
+  last_suggested_date: '2022-01-02'
+  count: 1
+  index: 59
+  nickname: ""
+- name: "genoise cake"
+  comments:
+  - date: "5/21/17"
+    comment: "with blueberry filling and chocolate buttercream frosting, with a bourbon-water drip in the 2 layers. Julia Child's genoise cake recipe. make sure you use the right pot and bowl! the small pot but not the smallest one--the silver one that we rarely use if that helps, and then the biggest circular glass tupperware"
+  tags:
+  - "dessert"
+  - "cake"
+  last_suggested_date: '2022-01-02'
+  count: 1
+  index: 55
+  nickname: ""
+- name: "cherry and blueberry upside-down cake"
+  comments:
+  - date: "4/11/17"
+    comment: "Bon Appetit recipe"
+  tags:
+  - "dessert"
+  - "cake"
+  last_suggested_date: '2022-01-02'
+  count: 1
+  index: 52
+  nickname: ""
+- name: "hot chocolate"
+  comments:
+  - date: "11/20/16"
+    comment: "per cup: 2T cocoa, 1T brown sugar, 1c milk; add only 2T or so milk at first to the rest, heating in pan; then once it dissolves heat the rest of the milk; once nearly boiling, put it in a blender to froth"
+  tags:
+  - "dessert"
+  last_suggested_date: '2022-01-02'
+  count: 4
+  index: 48
+  nickname: ""
+- name: "mulled spiced apple cider, pumpkin butter"
+  comments: []
+  tags:
+  - "dessert"
+  last_suggested_date: '2022-01-02'
+  count: 1
+  index: 13
+  nickname: ""
 - name: "skillet cookie pie"
   comments:
   - date: "4/17/17"
@@ -3807,4 +3763,63 @@
   last_suggested_date: '2022-01-02'
   count: 1
   index: 88
+  nickname: ""
+- name: "blueberry buckle"
+  comments:
+  - date: "6/3/20"
+    comment: "this was really good. jess says she did 2c frozen blueberries"
+    url: "https://www.spendwithpennies.com/blueberry-buckle/"
+  tags:
+  - "dessert"
+  last_suggested_date: '2022-01-03'
+  count: 2
+  index: 76
+  nickname: ""
+- name: "bon appetit's best chocolate chip cookies"
+  comments:
+  - date: "5/2/20"
+    comment: "pretty good flavor, and even better the next day"
+    url: "https://www.bonappetit.com/recipe/bas-best-chocolate-chip-cookies/"
+  tags:
+  - "dessert"
+  - "cookies"
+  last_suggested_date: '2022-01-03'
+  count: 1
+  index: 73
+  nickname: ""
+- name: "bourbon cookies"
+  comments:
+  - date: "12/23/16"
+    comment: "they're basically like sugar cookies if you short on the bourbon, but they're still very good. we make a buttercream frosting for them"
+  - date: "10/25/18"
+    comment: "we make 86 of them, with buttercream frosting. we try to pipe it but it eventually starts melting/clumping weirdly, so a spoon was the way to go. maybe next time don't add more milk than the recipe calls for..."
+  - date: "12/24/20"
+    comment: "same note as last time: actually look up a buttercream recipe this time and do NOT add more milk than it says! otherwise the icing separates. such a delicious cookie though. baked for 10 minutes at 350F."
+  tags:
+  - "dessert"
+  - "cookies"
+  last_suggested_date: '2022-01-03'
+  count: 3
+  index: 49
+  nickname: ""
+- name: "poptarts"
+  comments:
+  - date: "10/27/16"
+    comment: "For all our attempts at doing this over the years, the only one that EVER turns out well is chevre with honey. Seriously. The others are never as good as they should be."
+  tags:
+  - "dessert"
+  last_suggested_date: '2022-01-03'
+  count: 1
+  index: 47
+  nickname: ""
+- name: "peach pie"
+  comments:
+  - date: "9/4/16"
+    comment: "1/4c butter, 1/2c white sugar, 1/4c brown sugar, 1/3c flour, 2T cornstarch, 1/4t cinnamon, 3 cans peaches (no syrup); 400F for 50 minutes; a mix of Betty Crocker and a simple allrecipes one"
+  tags:
+  - "dessert"
+  - "pie"
+  last_suggested_date: '2022-01-03'
+  count: 1
+  index: 46
   nickname: ""
