--- a/_data/recipes.yml
+++ b/_data/recipes.yml
@@ -14,6 +14,12 @@
 # - You should NOT edit any existing comment (only create new ones)
 # - You can ADD existing tags but do not remove any
 #
+- name: "whole wheat pancakes"
+  comments:
+  - date: "1/14/21"
+    comment: "good! added 1 extra tsp of sugar (total = 3 tsp for servings in recipe). used 1/4 cup to pour."
+    url: "https://www.fifteenspatulas.com/whole-wheat-pancakes/"
+  tags: ["breakfast"]
 - name: "roasted cauliflower pasta & walnuts"
   comments:
   - date: "1/3/21"
