--- a/_data/recipes.yml
+++ b/_data/recipes.yml
@@ -893,7 +893,7 @@
   - date: "1/3/18"
     comment: "just the crust top (not bottom), in the 2.2qt rectangular pyrex"
   - date: "1/14/17"
-    comment: "used corn starch to thicken at the end; baked in 9\" square pan; to measure chicken we just diced breasts and filled up a little over 3 cups, then pan-fried it"
+    comment: "used corn starch to thicken at the end; baked in 9in square pan; to measure chicken we just diced breasts and filled up a little over 3 cups, then pan-fried it"
   - date: "10/26/16"
     comment: ""
     url: "http://thepioneerwoman.com/cooking/pot-pie/"
