--- a/_data/recipes.yml
+++ b/_data/recipes.yml
@@ -871,7 +871,7 @@
 - name: "chicken pot pie"
   comments:
   - date: "1/5/21"
-    comment: "New recipe. +2T flour to thicken it up faster. Only used top pie crust layer (didn't do bottom) -- used store bought Pillsbury dough. Didn't have celery and it was totally fine. 
+    comment: "New recipe. +2T flour to thicken it up faster. Only used top pie crust layer (didn't do bottom) -- used store bought Pillsbury dough. Didn't have celery and it was totally fine."
     url: "https://www.thewholesomedish.com/the-best-classic-chicken-pot-pie/#recipe"
   - date: "3/17/21"
     comment: "Jess makes the biscuit top recipe from one of her new cookbooks. Next time should just do a single serve, in the smaller rectangle pyrex. This time she used like 1.5 times the biscuit top and it was way too much. Also be warned, there's a lot of prep."
@@ -893,7 +893,7 @@
   - date: "1/3/18"
     comment: "just the crust top (not bottom), in the 2.2qt rectangular pyrex"
   - date: "1/14/17"
-    comment: "used corn starch to thicken at the end; baked in 9in square pan; to measure chicken we just diced breasts and filled up a little over 3 cups, then pan-fried it"
+    comment: "used corn starch to thicken at the end; baked in 9\" square pan; to measure chicken we just diced breasts and filled up a little over 3 cups, then pan-fried it"
   - date: "10/26/16"
     comment: ""
     url: "http://thepioneerwoman.com/cooking/pot-pie/"
