--- a/_data/recipes.yml
+++ b/_data/recipes.yml
@@ -75,6 +75,7 @@
   comments:
   - date: "9/19/22"
     comment: "super delicious"
+    url: "https://www.loveandlemons.com/banh-mi/#wprm-recipe-container-45320"
   - date: "4/18/22"
     comment: "delicious"
   tags:
