--- a/_data/recipes.yml
+++ b/_data/recipes.yml
@@ -14,6 +14,14 @@
 # - Do NOT edit any existing comment (only create new ones)
 # - You can add new tags to existing items if you'd like
 #
+- name: "tomato glaze meatloaves with brown butter mashed potatoes"
+  comments:
+  - date: "11/30/22"
+    comment: "Delicious! Took about 1.5 hours to make. Used store bought breadcrumbs. Follow the recipe measurements and all the textures will be great."
+    url: "https://smittenkitchen.com/2017/02/tomato-glazed-meatloaves-with-brown-butter-mashed-potatoes/"
+  tags:
+  - "dinner"
+  - "beef"
 - name: "beef stew"
   comments:
   - date: "10/13/22"
